# Gitme

./: .gitignore  CMakeLists.txt  README.md  commit.h  for_developers.txt  gitme_type.cpp  gitme_type.h  main.cpp  merge.h  rename_branch.h  show_branches.h  show_local_branches.h  stash.h  telephone.cpp  tyj.cpp
Completion/: completion.sh  completion_backup.sh  how_to_develop.txt  make_completion.sh
Completion/commit/: pname.sh  pvalue.sh  subcommand.txt
Completion/merge/: pname.sh
Completion/rename_branch/: pname.sh  pvalue.sh  subcommand.txt
Completion/show_local_branches/: pname.sh  subcommand.txt
Completion/stash/: pname.sh  subcommand.txt
